# qiqqa-open-source

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_full.md  DEVELOPER-GOALS.md  DEVELOPER-INFO.md  Qiqqa-dev.sln  Qiqqa.sln  QiqqaTests.runsettings  README.md  build-installer.sh  common-project.props  compile-obsidian-notes.sh  git_push_all.sh  index.html  package-lock.json  package.json  superclean.sh  update_CHANGELOG.sh  xaml-beautify.sh
.github/: FUNDING.yml
CefSharp.Example/: CefExample.cs  CefSharp.Example.csproj  packages.config
CefSharp.Wpf.Example/: App.xaml.cs  CefSharp.Wpf.Example.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  packages.config
Qiqqa/: App.config  Qiqqa.csproj  QiqqaSharedCore.projitems  QiqqaSharedCore.shproj  QiqqaSharedUI.projitems  README.md  The Qiqqa Manual.pptx  The Qiqqa Manual.todo.docx  licenses.licx  packages.config
Qiqqa-Software-Installer-Releases/: README.md
Qiqqa.Build/: ClientVersion.xml  QiqqaCodeAnalysisRules.ruleset  README.md  beautify-xaml.js  bump_version.js  copy_mupdf_binaries.cmd  fix-docs-filenames.js  go.bat  munch_changelog.js  patch_settings_file.js  refresh_testdata_in_CS_testfiles.js  ~README.txt
QiqqaCore/: QiqqaCore.csproj  README.md
QiqqaHasher/: Program.cs  QiqqaHasher.csproj  packages.config
QiqqaLegacyFileFormats/: AITags.cs  BrainStorm.cs  BrainstormFileFormat.cs  BrainstormMetaData.cs  ConfigurationRecord.cs  DictionaryBasedObject.cs  (+21 more)
Technology Tests/CMake in Visual Studio/simple/: CMakeLists.txt  Can We Talk - Node B.cpp  Can We Talk - Node B.h  demo-test.cpp
(+5193 files in other folders)
