# CMakeList.txt : CMake project for Can We Talk - Node B, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "demo-test.cpp" "demo-test.h")

# TODO: Add tests and install targets if needed.
